tests/machine/x/ocaml/group_by_left_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_left_join.ml", line 39, characters 11-12:
39 |       if r.o then
                ^
Error: Unbound record field o


Context (around line 39):
  37 |     __res0 := [("name",Obj.repr (g.key));("count",Obj.repr (List.length (let __res1 = ref [] in
  38 |   List.iter (fun r ->
  39 |       if r.o then
  40 |     __res1 := r :: !__res1;
  41 |   ) g;
